--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  font-size: 20px;
 }
 
 body {
@@ -36,7 +37,7 @@ button {
   font-family: "Victorianna";
   font-size: 3em;
   color: #3c00ff;
-  margin-block-end: 0.2em;
+  margin-block-end: 0em;
 }
 
 p {
@@ -88,12 +89,6 @@ p {
     background: #2c3163;
     box-shadow: inset 0px 1px 0px 5px #a8b1efbb;
   }
-}
-
-#greeting {
-  margin-top: 2.5%;
-  font-size: 5em;
-  font-weight: 700;
 }
 
 .italic {
