--- a/src/styles/dark-mode.css
+++ b/src/styles/dark-mode.css
@@ -87,7 +87,48 @@
 .dark-mode #sun-btn:hover {
   color: rgb(253, 237, 130);
 }
-
-.Dark-Mode .App {
+@-webkit-keyframes slide-in-dark {
+  0% {
+    top: 100vh;
+    opacity: 0%;
+  }
+  70% {
+    top: 0vh;
+    opacity: 50%;
+  }
+  100% {
+    top: 2.5vh;
+    opacity: 100%;
+    border: 1px solid blue;
+    padding: 40px 20px;
+    border: 1px solid #3434a5;
+    box-shadow: inset 0 0 0 2px #3434a4, 10px -10px 0 -3px #121212, 10px -10px #40803e, 20px -20px 0 -3px #121212, 20px -20px #c0ab41, 30px -30px 0 -3px #121212, 30px -30px #b77c51, 40px -40px 0 -3px #121212, 40px -40px #b84444;
+  }
+}
+@keyframes slide-in-dark {
+  0% {
+    top: 100vh;
+    opacity: 0%;
+  }
+  70% {
+    top: 0vh;
+    opacity: 50%;
+  }
+  100% {
+    top: 2.5vh;
+    opacity: 100%;
+    border: 1px solid blue;
+    padding: 40px 20px;
+    border: 1px solid #3434a5;
+    box-shadow: inset 0 0 0 2px #3434a4, 10px -10px 0 -3px #121212, 10px -10px #40803e, 20px -20px 0 -3px #121212, 20px -20px #c0ab41, 30px -30px 0 -3px #121212, 30px -30px #b77c51, 40px -40px 0 -3px #121212, 40px -40px #b84444;
+  }
+}
+.dark-mode .slide-in {
+  -webkit-animation: slide-in-dark 2.8s;
+          animation: slide-in-dark 2.8s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+.dark-mode .Dark-Mode .App {
   background: #121212;
 }/*# sourceMappingURL=dark-mode.css.map */
