--- a/src/Components/AboutMe/AboutMe.css
+++ b/src/Components/AboutMe/AboutMe.css
@@ -10,8 +10,8 @@
   top: 100vh;
   -webkit-animation: slide-in 2.8s;
           animation: slide-in 2.8s;
-  -webkit-animation-delay: 2.5s;
-          animation-delay: 2.5s;
+  -webkit-animation-delay: 2.1s;
+          animation-delay: 2.1s;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
   transition: ease-in-out;
@@ -91,7 +91,7 @@
     opacity: 100%;
     border: 1px solid blue;
     padding: 40px 20px;
-    box-shadow: blue 0px 0px 0px 2px inset, rgb(255, 255, 255) 10px -10px 0px -3px, rgb(31, 193, 27) 10px -10px, rgb(255, 255, 255) 20px -20px 0px -3px, rgb(255, 217, 19) 20px -20px, rgb(255, 255, 255) 30px -30px 0px -3px, rgb(255, 156, 85) 30px -30px, rgb(255, 255, 255) 40px -40px 0px -3px, rgb(255, 85, 85) 40px -40px;
+    box-shadow: inset 0 0 0 2px blue, 0px -10px 0 -3px #fff, 0px -10px #1fc11b, 0px -20px 0 -3px #fff, 0px -20px #ffd913, 0px -30px 0 -3px #fff, 0px -30px #f55, 0px -40px 0 -3px #fff, 0px -20px #f55;
   }
 }
 @keyframes slide-in {
@@ -108,6 +108,6 @@
     opacity: 100%;
     border: 1px solid blue;
     padding: 40px 20px;
-    box-shadow: blue 0px 0px 0px 2px inset, rgb(255, 255, 255) 10px -10px 0px -3px, rgb(31, 193, 27) 10px -10px, rgb(255, 255, 255) 20px -20px 0px -3px, rgb(255, 217, 19) 20px -20px, rgb(255, 255, 255) 30px -30px 0px -3px, rgb(255, 156, 85) 30px -30px, rgb(255, 255, 255) 40px -40px 0px -3px, rgb(255, 85, 85) 40px -40px;
+    box-shadow: inset 0 0 0 2px blue, 0px -10px 0 -3px #fff, 0px -10px #1fc11b, 0px -20px 0 -3px #fff, 0px -20px #ffd913, 0px -30px 0 -3px #fff, 0px -30px #f55, 0px -40px 0 -3px #fff, 0px -20px #f55;
   }
 }/*# sourceMappingURL=AboutMe.css.map */
