--- a/src/Components/AboutMe/AboutMe.scss
+++ b/src/Components/AboutMe/AboutMe.scss
@@ -9,7 +9,7 @@
   position: relative;
   top: 100vh;
   animation: slide-in 2.8s;
-  animation-delay: 2.5s;
+  animation-delay: 2.1s;
   animation-fill-mode: forwards;
   transition: ease-in-out;
   gap: 10px;
@@ -91,10 +91,8 @@
     opacity: 100%;
     border: 1px solid blue;
     padding: 40px 20px;
-    box-shadow: blue 0px 0px 0px 2px inset,
-      rgb(255, 255, 255) 10px -10px 0px -3px, rgb(31, 193, 27) 10px -10px,
-      rgb(255, 255, 255) 20px -20px 0px -3px, rgb(255, 217, 19) 20px -20px,
-      rgb(255, 255, 255) 30px -30px 0px -3px, rgb(255, 156, 85) 30px -30px,
-      rgb(255, 255, 255) 40px -40px 0px -3px, rgb(255, 85, 85) 40px -40px; // border-radius: 2.5% 10% 2.5% 10%;
+    box-shadow: inset 0 0 0 2px blue, 0px -10px 0 -3px #fff, 0px -10px #1fc11b,
+      0px -20px 0 -3px #fff, 0px -20px #ffd913, 0px -30px 0 -3px #fff,
+      0px -30px #f55, 0px -40px 0 -3px #fff, 0px -20px #f55;
   }
 }
