--- a/src/Components/LandingPage/LandingPage.scss
+++ b/src/Components/LandingPage/LandingPage.scss
@@ -66,7 +66,13 @@
 
 .header-row,
 .footer-row {
+  display: flex;
   width: 100%;
+  align-items: flex-start;
+  padding: 0.5rem;
+  // > div {
+  //   padding: 0.1rem 1rem;
+  // }
 }
 
 .content-row {
@@ -82,9 +88,11 @@
 }
 
 h1 {
-  padding: 2vh;
   font-family: "CirrusCumulus";
-  font-size: 2rem;
+  font-size: 2.5rem;
   margin: 0;
   height: 20%;
+  color: rgb(226 23 68);
+  margin: 0;
+  padding: 1rem 4rem;
 }
